GRHB-259: * styles (color and text wrapping), content clearing, ability to display html tags fixes

--- a/frontend/src/components/interview/components/history-section/components/interview-note-cards-list/components/interview-note-card/styles.module.scss
+++ b/frontend/src/components/interview/components/history-section/components/interview-note-cards-list/components/interview-note-card/styles.module.scss
@@ -5,13 +5,14 @@
   min-height: 100px;
   margin-top: 10px;
   padding: 10px;
-  background: var(--background-gray-200);
+  background: var(--background-gray-300);
   border-radius: 20px;
 }
 
 .cardContentWrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 3px;
 }
 
@@ -24,4 +25,8 @@
 
 .authorNameSection {
   margin-left: 5px;
+}
+
+.noteContent {
+  word-break: break-all;
 }
